--- a/css/style.css
+++ b/css/style.css
@@ -41,7 +41,7 @@ body {
 }
 .mumu {
   height: 125%;
-  width: 10000px;
+  width: 100%;
   background-color: ;
   opacity: 5%;
   position: absolute;
@@ -59,8 +59,8 @@ body {
 }
 .sound {
   position: absolute;
-  top: 60%;
-  right: 10%;
+  top: 500px;
+  right: 120px;
   height: 250px;
   width: 250px;
   border-radius: 20%;
@@ -73,7 +73,7 @@ body {
   width: 180px;
   border-radius: 50%;
   position: absolute;
-  top: 65%;
+  top: 560px;
   right: 0px;
   box-shadow: 0 0 15px 0px white;
 }
@@ -85,7 +85,7 @@ body {
   height: 320px;
   width: 250px;
   position: absolute;
-  top: 80%;
+  top: 690px;
   left: 0px;
   box-shadow: 0 0 15px 0px white;
   transform: rotate(-5deg);
@@ -94,7 +94,7 @@ body {
   height: 200px;
   width: 200px;
   position: absolute;
-  top: 58%;
+  top: 530px;
   left: 20px;
   box-shadow: 0 0 15px 0px white;
 }
@@ -103,7 +103,7 @@ body {
   height: 200px;
   width: 200px;
   position: absolute;
-  top: 2%;
+  top: 10px;
 right: 20px;
   box-shadow: 0 0 15px 0px white;
 }
@@ -111,12 +111,26 @@ right: 20px;
   height: 120px;
   width: 120px;
   position: absolute;
-  top: 29%;
+  top: 200px;
 right: 100px;
   box-shadow: 0 0 15px 0px white;
   transform: rotate(10deg);
 }
 .instagram-media {
   height: 50px;
-  width: 50px;
+  width: 20px;
+  position: absolute;
+  top: 800px;
+  right: 10px;
+}
+a{
+  color: Blue;
+}
+
+.bunny {
+  height: 150px;
+  width: 150px;
+  position: absolute;
+  top: 650px;
+  right: 400px;
 }
